Html translation fix

--- a/webapp/views/administration/service.html
+++ b/webapp/views/administration/service.html
@@ -139,7 +139,7 @@
                 <div class="form-group">
                   <div class="checkbox">
                     <label style="font-weight: 700; margin-top:19px;">
-                      <input type="checkbox" name="active" ng-model="ctrl.service.isLocal" ng-init="ctrl.initService(true)"> Local Service
+                      <input type="checkbox" name="active" ng-model="ctrl.service.isLocal" ng-init="ctrl.initService(true)"> {{ i18n.__('Local Service') }}
                     </label>
                   </div>
                 </div>
