--- a/webapp/views/configuration/analysis.html
+++ b/webapp/views/configuration/analysis.html
@@ -237,7 +237,7 @@
                         ng-disabled="ctrl.isUpdating"
                         ng-change="ctrl.onStoragerFormatChange()"
                         ng-model="ctrl.storager.format"
-                        ng-options="format.name for format in ctrl.storagerFormats" required>
+                        ng-options="i18n.__(format.name) for format in ctrl.storagerFormats" required>
               </select>
 
               <span class="help-block" ng-show="forms.storagerDataForm.format.$dirty && forms.storagerDataForm.format.$error.required">
@@ -294,7 +294,7 @@
           <form name="forms.targetDataSeriesForm">
             <div class="col-md-6">
               <div class="form-group has-feedback" terrama2-show-errors>
-                <label>{[ __("DataSeries") ]}:</label>
+                <label>{{ i18n.__("DataSeries") }}:</label>
                 <select class="form-control"
                         name="targetDataSeries"
                         ng-disabled="ctrl.isUpdating"
@@ -409,7 +409,7 @@
                   <select class="form-control" name="interpolation_method"
                           ng-model="ctrl.analysis.grid.interpolation_method"
                           ng-required="ctrl.analysis.type_id == 2"
-                          ng-options="obj.value as obj.name for (k, obj) in ctrl.interpolationMethods">
+                          ng-options="obj.value as i18n.__(obj.name) for (k, obj) in ctrl.interpolationMethods">
                   </select>
 
                   <!-- required -->
@@ -448,7 +448,7 @@
                   <select class="form-control" name="area_of_interest"
                           ng-model="ctrl.analysis.grid.area_of_interest_type"
                           ng-required="ctrl.analysis.type_id == 2"
-                          ng-options="interestArea.value as interestArea.name for interestArea in ctrl.interestAreaTypes"
+                          ng-options="interestArea.value as i18n.__(interestArea.name) for interestArea in ctrl.interestAreaTypes"
                           ng-change="ctrl.onAreaOfInterestChange()">
                   </select>
 
@@ -491,7 +491,7 @@
                   <select class="form-control" name="resolution_type"
                           ng-model="ctrl.analysis.grid.resolution_type"
                           ng-required="ctrl.analysis.type_id == 2"
-                          ng-options="resolutionType.value as resolutionType.name for resolutionType in ctrl.resolutionTypes"
+                          ng-options="resolutionType.value as i18n.__(resolutionType.name) for resolutionType in ctrl.resolutionTypes"
                           ng-change="ctrl.onResolutionChange()">
                   </select>
 
