--- a/webapp/public/javascripts/angular/data-series/templates/intersection.html
+++ b/webapp/public/javascripts/angular/data-series/templates/intersection.html
@@ -30,7 +30,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="attributesModalLabel">{{ i18n.__('Select Attibutes') }}</h4>
+        <h4 class="modal-title" id="attributesModalLabel">{{ i18n.__('Select attributes') }}</h4>
       </div>
       <div class="modal-body">
         <div class="col-md-12">
