--- a/webapp/views/configuration/view.html
+++ b/webapp/views/configuration/view.html
@@ -159,14 +159,14 @@
       </form>
     </terrama2-box>
 
-    <terrama2-box title="i18n.__('Schedule')" css="ctrl.css" ng-show="ctrl.isDynamic">
+    <terrama2-box title="i18n.__('Schedule')" css="ctrl.css" ng-show="ctrl.isDynamic && ctrl.isValid">
       <div class="col-md-12">
         <terrama2-schedule model="ctrl.view.schedule" options="ctrl.scheduleOptions"></terrama2-schedule>
       </div>
     </terrama2-box>
 
     <terrama2-box title="i18n.__('Style')" css="ctrl.css"
-                  ng-show="ctrl.viewDataSeries.data_series_semantics.data_series_type_name && ctrl.viewDataSeries.data_series_semantics.data_series_type_name !== ctrl.DataSeriesType.DCP">
+                  ng-show="ctrl.viewDataSeries.data_series_semantics.data_series_type_name && ctrl.viewDataSeries.data_series_semantics.data_series_type_name !== ctrl.DataSeriesType.DCP && ctrl.isValid">
       <form name="forms.styleForm" novalidate>      
         <!-- Vectorial -->
         <terrama2-style-legend form-ctrl="forms.styleForm" type="ctrl.targetDataSeriesType" model="ctrl.legend"></terrama2-style-legend>
@@ -175,13 +175,13 @@
 
     <div class="box-footer">
       <div class="btn-group pull-right" style="margin-left: 10px;">
-        <button type="button" class="btn btn-primary" ng-bind="i18n.__('Save and Run')" data-ng-click="ctrl.save(true);"></button>
-        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <button ng-disabled="!ctrl.isValid" type="button" class="btn btn-primary" ng-bind="i18n.__('Save and Run')" data-ng-click="ctrl.isValid && ctrl.save(true);"></button>
+        <button ng-disabled="!ctrl.isValid" type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <span class="caret"></span>
           <span class="sr-only"></span>
         </button>
         <ul class="dropdown-menu terrama2-button-dropdown">
-          <li><a href="javascript::void();" data-ng-click="ctrl.save(false);" ng-bind="i18n.__('Save')"></a></li>
+          <li><a href="javascript::void();" ng-disabled="!ctrl.isValid" data-ng-click="ctrl.isValid && ctrl.save(false);" ng-bind="i18n.__('Save')"></a></li>
         </ul>
       </div>
       <a href="/configuration/views/" class="btn btn-primary pull-right" style="margin-left: 10px;">
