--- a/webapp/public/javascripts/angular/data-series/templates/storager.html
+++ b/webapp/public/javascripts/angular/data-series/templates/storager.html
@@ -76,7 +76,7 @@
                 <tbody style="overflow-y: auto; height: 150px;">
                 <!-- header-->
                 <tr style="height: 30px;">
-                  <th ng-repeat="field in tableFieldsStorager">{{ capitalizeIt(field) }}</th>
+                  <th ng-repeat="field in tableFieldsStorager">{{ i18n.__(capitalizeIt(field)) }}</th>
                   <th>ID</th>
                 </tr>
 
