Filter service list by service type

--- a/webapp/views/configuration/dataset.html
+++ b/webapp/views/configuration/dataset.html
@@ -111,6 +111,7 @@
         DataSeriesType: {[ Enums.DataSeriesType|json|safe ]}  || {},
         DataSeriesFormat: {[ Enums.DataSeriesFormat|json|safe ]} || {},
         TemporalityType: {[ Enums.TemporalityType|json|safe ]}  || {},
+        ServiceType: {[ Enums.ServiceType|json|safe ]}  || {}
       }
     }
 
