checking for updates in the exportation

--- a/webapp/views/configuration/projects.html
+++ b/webapp/views/configuration/projects.html
@@ -66,7 +66,7 @@
             </div>
             <div class="box collapsed-box" ng-show="dataSeries[element.id].length > 0">
               <div class="box-header with-border">
-                <span class="box-title" style="font-size: 14px;">Data Series ({{ i18n.__('Dynamic Data') }})</span>
+                <span class="box-title" style="font-size: 14px;">{{ i18n.__('Dynamic Data') }}</span>
                 <div class="box-tools pull-right">
                   <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-plus"></i></button>
                 </div>
@@ -81,7 +81,7 @@
             </div>
             <div class="box collapsed-box" ng-show="dataSeriesStatic[element.id].length > 0">
               <div class="box-header with-border">
-                <span class="box-title" style="font-size: 14px;">Data Series ({{ i18n.__('Static Data') }})</span>
+                <span class="box-title" style="font-size: 14px;">{{ i18n.__('Static Data') }}</span>
                 <div class="box-tools pull-right">
                   <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-plus"></i></button>
                 </div>
