resolving validate button handler

--- a/webapp/public/stylesheets/terrama2.css
+++ b/webapp/public/stylesheets/terrama2.css
@@ -335,6 +335,15 @@ bootstrap-decorator span {
   cursor: not-allowed;
 }
 
+.tool-tip {
+  display: inline-block !important;
+  float: right !important;
+}
+
+.tool-tip [disabled] {
+  pointer-events: none !important;
+}
+
 /*
   It fixes intersection nav to include check icon
 */
