--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -96,6 +96,12 @@
         TerraMA2WebComponents.LayerExplorer.addLayersFromMap("analysis", "terrama2-layerexplorer", null, "treeview unsortable", null);
         allLayers.push({id: "analysis", name: "Analysis"});
 
+    //Adding open map street
+    if (TerraMA2WebComponents.MapDisplay.addOSMLayer("osm", "Open street", "Open street", false, "terrama2-layerexplorer", false)){
+        TerraMA2WebComponents.LayerExplorer.addLayersFromMap("osm", "template", null, "treeview unsortable terrama2-truncate-text", null);
+        allLayers.push({id: "osm", name: "Open street"});
+    }
+
     addTreeviewMenuClass();
 
     var socket;
@@ -176,6 +182,7 @@
 
         addLayersToSort();
         setSortable();
+        $("#osm input").trigger("click");
     });
 
     socket.on('proxyResponseCapabilities', function(data){
