--- a/webapp/public/javascripts/angular/views/templates/style.html
+++ b/webapp/public/javascripts/angular/views/templates/style.html
@@ -69,7 +69,7 @@
       <select class="form-control"
               name="styleType"
               ng-model="$ctrl.model.type"
-              ng-options="elementType.value as elementType.name for elementType in $ctrl.styleTypes | filter: $ctrl.typeFilter(elementType)"
+              ng-options="elementType.value as elementType.name for elementType in $ctrl.styleTypes | filter: $ctrl.typeFilter"
               required>
       </select>
 
@@ -154,7 +154,8 @@
                    class="form-control"
                    name="field_value_{{$index}}"
                    ng-model="elm.value"
-                   ng-if="$ctrl.model.type === $ctrl.StyleType.VALUE">
+                   ng-if="$ctrl.model.type === $ctrl.StyleType.VALUE"
+                   required>
             <!-- Interval and Ramp Types -->
             <input type="number" 
                   class="form-control" 
@@ -169,6 +170,10 @@
             <span class="help-block"
                   ng-show="($ctrl.model.type === $ctrl.StyleType.INTERVAL || $ctrl.model.type === $ctrl.StyleType.RAMP) && $ctrl.formCtrl['field_value_' + $index].$error.number"
                   ng-bind="$ctrl.i18n.__('Value must be a number')">
+            </span>
+            <span class="help-block"
+                  ng-show="($ctrl.model.type === $ctrl.StyleType.INTERVAL || $ctrl.model.type === $ctrl.StyleType.RAMP) && $ctrl.formCtrl['field_value_' + $index].$error.number"
+                  ng-bind="$ctrl.i18n.__('Value must be unique')">
             </span>
           </div>
         </td>
